--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "watchdog>=2.3.0", # For future enhancement of file watching
     "python-docx>=1.1.0", # For processing Word documents # For audio transcription
     "faster-whisper>=0.10.0",
+    "youtube-transcript-api>=1.0.3",
 ]
 
 [project.optional-dependencies]
