--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "python-docx>=1.1.0", # For processing Word documents # For audio transcription
     "faster-whisper>=0.10.0",
     "youtube-transcript-api>=1.0.3",
+    "google-api-python-client>=2.0.0",
+    "google-auth-httplib2>=0.1.0",
+    "google-auth-oauthlib>=1.0.0",
 ]
 
 [project.optional-dependencies]
